Fixes home page alignment bug introduced in a532037

--- a/_assets/sass/application.scss
+++ b/_assets/sass/application.scss
@@ -1,3 +1,7 @@
 @import "mixins/mixins";
 @import "layout/layout";
 @import "components/components";
+
+.text-center {
+  text-align: center;
+}
